# mpris-browser-integration

./: CMakeLists.txt  README.md  StaticMessages.sh  com.github.rgeorgiev583.mpris.chrome_integration.json.in  com.github.rgeorgiev583.mpris.firefox_integration.json.in  dev_README.txt
host/: CMakeLists.txt  abstractbrowserplugin.cpp  main.cpp  mprisplugin.cpp
